# CraftClone

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui_impl_sdl_gl3.cpp  main.cpp  shader.frag  shader.vert
Engine/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  FpsCounter.cpp  FpsCounter.h  GameEventDispatcher.cpp  GameEventDispatcher.h  Logger.cpp  Logger.h  Shader.cpp  Shader.h  WindowManager.cpp  WindowManager.h  World.cpp  World.h
Engine/SDL/: WindowPtr.h
Engine/events/: Event.cpp  Event.h  EventQueue.cpp  EventQueue.h  EventThread.cpp  EventThread.h
Engine/utils/: ChunkIndex.cpp  Chunkindex.h  Essentials.h  IObserver.h  ISignal.h  Observer.h  Property.h  Signal.h
shaders/: shader.frag  shader.vert
